# agromind-cv

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
scripts/: activate_wsl.sh  check_environment.py  download_plantvillage.sh  setup_wsl.sh  smoke_api.py  smoke_inference.sh
src/: api.py  predict.py  prepare_dataset.py  train.py
src/agromind_cv/: __init__.py  api.py  config.py  inference.py  prepare.py  training.py
tests/: test_api.py  test_prepare.py
